--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "three": "^0.162.0",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "three": "^0.162.0"
   }
 }
